Removed csrf token interceptor.

--- a/apps/fis-scraper-frontend/src/app/scraper/current-files/current-files.component.html
+++ b/apps/fis-scraper-frontend/src/app/scraper/current-files/current-files.component.html
@@ -40,7 +40,7 @@
           <mat-icon
             matListItemIcon
             [svgIcon]="
-              file.kind === 'team' && !file.details ? 'zip_file' : 'csv_file'
+              file.kind === 'team' && !file.details ? icons.zip : icons.csv
             "></mat-icon>
           <div matListItemTitle>{{ file.place }} {{ file.hill_size }}</div>
           <div matListItemLine>{{ file.date | date: 'medium' }}</div>
